[package]
name = "packybara-cli"
version = "0.36.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

[[bin]]
name = "pkb"
path = "src/bin/main.rs"

[[bin]]
name = "pkb-setupdb"
path = "src/bin/setupdb.rs"
[dependencies]
packybara = {git= "https://github.com/jlgerber/packybara", tag="v0.36.0"}
structopt = "0.3.9"
prettytable-rs = "0.8.0"
log = "0.4.8"
env_logger = "0.7.1"
whoami = "0.7.0"
