[package]
name = "packybara-cli"
version = "0.44.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

[[bin]]
name = "pkb"
path = "src/bin/main.rs"

[[bin]]
name = "pkb-setupdb"
path = "src/bin/setupdb.rs"

[dependencies]
packybara = {git= "https://github.com/jlgerber/packybara", tag="async_v0.45.1"}
structopt = "0.3.11"
prettytable-rs = "0.8.0"
log = "0.4.8"
env_logger = "0.7.1"
whoami = "0.8.1"
main_error = "0.1.0"
serde_json = "1.0.48"
tokio-postgres = "0.5.3"
tokio = {version="0.2.13", features=["macros","tcp", "dns", "io-util"]}
